[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Images/gfDanceTitle.res" type="SpriteFrames" id=1]
[ext_resource path="res://Assets/Images/logoBumpin.res" type="SpriteFrames" id=2]
[ext_resource path="res://Scenes/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/titleEnter.res" type="SpriteFrames" id=4]
[ext_resource path="res://Assets/Fonts/font_alphabet.tres" type="BitmapFont" id=5]
[ext_resource path="res://Assets/Images/GodotLogo.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "confirm"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "ENTER PRESSED" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frames")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Press Enter to Begin" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frames")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Logo" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Logo"]
position = Vector2( 335, 262 )
frames = ExtResource( 2 )
animation = "logo bumpin"

[node name="GF" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="GF"]
position = Vector2( 879, 383 )
frames = ExtResource( 1 )
animation = "danceLeft"

[node name="EnterText" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="EnterText"]
position = Vector2( 840, 636 )
frames = ExtResource( 4 )
animation = "Press Enter to Begin"
frame = 27
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnterText"]
root_node = NodePath("../AnimatedSprite")
anims/confirm = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="IntroText" type="Node2D" parent="."]

[node name="BG" type="ColorRect" parent="IntroText"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Flash" type="ColorRect" parent="IntroText"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="IntroText"]
margin_left = -320.0
margin_top = 160.0
margin_right = 1612.0
margin_bottom = 381.0
custom_constants/line_spacing = -20
custom_fonts/font = ExtResource( 5 )
align = 1

[node name="GodotLogo" type="Sprite" parent="IntroText"]
visible = false
position = Vector2( 640, 503 )
scale = Vector2( 0.123828, 0.123828 )
texture = ExtResource( 6 )
